fix css pour que l'éditeur n'overflow pas la div du dessous

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -90,3 +90,7 @@
 .organisme-card > div {
     padding-bottom: .5rem;
 }
+
+.ql-container {
+    height: unset;
+}
